# sanctii

./: .env  .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
backend/: index.js  package-lock.json  package.json
backend/models/: Healthcard.js  User.js
backend/presage_engine/: CMakeLists.txt  hello_vitals.cpp
backend/routes/: feedback.js  healthcard.js  incidents.js  schedule.js  triage.js  users.js  vitals.js
public/: hospitals.csv
src/: App.css  App.jsx  Landing.jsx  index.css  main.jsx  theme.jsx
src/auth/: AuthProvider.jsx  ProtectedRoute.jsx  persistedRole.js  roles.js
src/components/: Hero.jsx  Hologram.jsx  HospitalMap3D.jsx  SharedUI.jsx
src/pages/: Doctor.jsx  Hacker.jsx  Landing.jsx  Login.jsx  Patient.jsx  PatientFeedbackPage.jsx  Presage.jsx  ScannerPage.jsx
